--- a/plugins/MultiSites/angularjs/site/site.directive.html
+++ b/plugins/MultiSites/angularjs/site/site.directive.html
@@ -20,7 +20,7 @@
         {{ website.revenue }}
     </td>
 
-    <td ng-if="period != 'range'" style="width:170px;">
+    <td ng-if="period != 'range'" class="multisites-evolution">
         <div class="visits" ng-if="!website.isGroup">
             <span ng-show="website[evolutionMetric] > 0"><img src="plugins/MultiSites/images/arrow_up.png" alt="" /> <span style="color: green;">{{ website[evolutionMetric] }}%&nbsp;</span></span>
             <span ng-show="website[evolutionMetric] == 0"><img src="plugins/MultiSites/images/stop.png" alt="" /> <span>{{ website[evolutionMetric] }}%</span></span>
